--- a/application.html
+++ b/application.html
@@ -5,23 +5,23 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Заявка на поставку</title>
-    <link rel="stylesheet" href="/styles/commons.css">
-    <link rel="stylesheet" href="/styles/application.css">
+    <link rel="stylesheet" href="styles/commons.css">
+    <link rel="stylesheet" href="styles/application.css">
 </head>
 <body>
     <header class="header">
         <div class="header_wrapper">
             <div class="header__logo">
-                <a href="/index.html">
+                <a href="index.html">
                     <img src="./assets/logo_blue.png" alt="logo" class="logo">
                 </a>
             </div>
             <nav class="header__block">
-                <a href="/conclusions.html">Каталог</a>
+                <a href="conclusions.html">Каталог</a>
                 <a href="#">Услуги</a>
-                <a href="/about.html">О компании</a>
-                <a href="/comments.html">Отзывы</a>
-                <a href="/contacts.html">Контакты</a>
+                <a href="about.html">О компании</a>
+                <a href="comments.html">Отзывы</a>
+                <a href="contacts.html">Контакты</a>
                 <a href="#">+7 (812) 602-12-60</a>
             </nav>
             <div class="burger">
@@ -32,12 +32,12 @@
             <div class="overlay"></div>
             <div class="burger_menu">
                 <div class="burger_menu-logo">
-                    <img src="/assets/logo_blue.png" alt="logo">
+                    <img src="assets/logo_blue.png" alt="logo">
                 </div>
                 <div class="burger_menu-border"></div>
                 <div class="burger_menu__container">
                     <div class="burger_menu__container-block">
-                        <a href="/conclusions.html" class="burger_menu-container-block-title">Каталог</a>
+                        <a href="conclusions.html" class="burger_menu-container-block-title">Каталог</a>
                         <a href="#" class="burger_menu-container-block-text">Импульсные дефектоскопы</a>
                         <a href="#" class="burger_menu-container-block-text">Дефектоскопы <br> постоянного потенциала</a>
                         <a href="#" class="burger_menu-container-block-text">Беспроводные <br> аккумуляторные блоки</a>
@@ -52,10 +52,10 @@
                         <a href="#" class="burger_menu-container-block-text">Дубликаты паспортов</a>
                     </div>
                     <!-- <div class="burger_menu__container-block"> -->
-                        <a href="/about.html" class="burger_menu-container-block-title">О компании</a>
+                        <a href="about.html" class="burger_menu-container-block-title">О компании</a>
                     <!-- </div> -->
                     <!-- <div class="burger_menu__container-block"> -->
-                        <a href="/payment.html" class="burger_menu-container-block-title">Доставка и оплата</a>
+                        <a href="payment.html" class="burger_menu-container-block-title">Доставка и оплата</a>
                     <!-- </div> -->
                     <div class="burger_menu__container-block">
                         <a href="#" class="burger_menu-container-block-title">Документация</a>
@@ -70,10 +70,10 @@
                         <a href="#" class="burger_menu-container-block-text">Группы электробезопасности</a>
                     </div>
                     <!-- <div class="burger_menu__container-block"> -->
-                        <a href="/comments.html" class="burger_menu-container-block-title">Отзывы</a>
+                        <a href="comments.html" class="burger_menu-container-block-title">Отзывы</a>
                     <!-- </div> -->
                     <div class="burger_menu__container-block">
-                        <a href="/contacts.html" class="burger_menu-container-block-title">Контакты</a>
+                        <a href="contacts.html" class="burger_menu-container-block-title">Контакты</a>
                         <p><span class="lang ru">Ru</span>|<span class="lang eng">Eng</span></p>
                     </div>
                     <div class="burger_menu__container-block">
@@ -108,10 +108,10 @@
         </div>
         <div class="require_banner">
             <div class="sign-1">
-                <img src="/assets/sign-1.webp" alt="icon">
+                <img src="assets/sign-1.webp" alt="icon">
             </div>
             <div class="sign-2">
-                <img src="/assets/sign-2.webp" alt="icon">
+                <img src="assets/sign-2.webp" alt="icon">
             </div>
             <p class="txt">«3.5.1. Поставка юридическим или физическим лицам источников ионизирующего излучения и изделий, содержащих их, за исключением делящихся материалов, проводится по заявкам (рекомендуемая форма указана в приложении 2). Поставка источников ионизирующего излучения проводится без заявок, если их характеристики соответствуют требованиям пункта 1.8 Правил.»</p>
         </div>
@@ -129,10 +129,10 @@
             </div>
             <div class="error_banner__wrapper_down">
                 <div class="error_sign-1">
-                    <img src="/assets/sign-1.webp" alt="icon">
+                    <img src="assets/sign-1.webp" alt="icon">
                 </div>
                 <div class="error_sign-2">
-                    <img src="/assets/sign-2.webp" alt="icon">
+                    <img src="assets/sign-2.webp" alt="icon">
                 </div>
                 <p class="txt">«1.8. Деятельность в области использования техногенных ИИИ и (или) обращения с радиоактивными отходами осуществляется при наличии специального разрешения (лицензии) на право осуществления этой деятельности, выданного органами, уполномоченными осуществлять лицензирование.»</p>
             </div>
@@ -175,7 +175,7 @@
 
     <section class="image">
         <div class="image_wrapper">
-            <img src="/assets/application-last-img.webp" alt="photo">
+            <img src="assets/application-last-img.webp" alt="photo">
         </div>
     </section>
 
@@ -215,18 +215,18 @@
                 <div class="mini_footer__container_up__block">
                     <h1>О компании</h1>
                     <div class="mini_footer__container_up__block-urls">
-                        <a href="/about.html">О компании</a>
-                        <a href="/payment.html">Доставка и оплата</a>
-                        <a href="/faq.html">Faq</a>
-                        <a href="/comments.html">Отзывы</a>
-                        <a href="/contacts.html">Контакты</a>
+                        <a href="about.html">О компании</a>
+                        <a href="payment.html">Доставка и оплата</a>
+                        <a href="faq.html">Faq</a>
+                        <a href="comments.html">Отзывы</a>
+                        <a href="contacts.html">Контакты</a>
                     </div>
                 </div>
             </div>
             <div class="mini_footer-border"></div>
             <div class="mini_footer__container_down">
                 <div class="mini_footer__container_down-logo">
-                    <img src="/assets/logo.png" alt="photo">
+                    <img src="assets/logo.png" alt="photo">
                 </div>
                 <a href="#">Политика конфиденциальности</a>
                 <a href="#">+7 (812) 602-12-60</a>
@@ -262,11 +262,11 @@
                     <div class="mini_footer__container_up__block">
                         <h1>О компании</h1>
                         <div class="mini_footer__container_up__block-urls">
-                            <a href="/about.html">О компании</a>
-                            <a href="/payment.html">Доставка и оплата</a>
-                            <a href="/faq.html">Faq</a>
-                            <a href="/comments.html">Отзывы</a>
-                            <a href="/contacts.html">Контакты</a>
+                            <a href="about.html">О компании</a>
+                            <a href="payment.html">Доставка и оплата</a>
+                            <a href="faq.html">Faq</a>
+                            <a href="comments.html">Отзывы</a>
+                            <a href="contacts.html">Контакты</a>
                             <a href="#">+7 (812) 602-12-60</a>
                         </div>
                     </div>
@@ -294,7 +294,7 @@
             <div class="mini_footer-border"></div>
             <div class="mini_footer__container_down">
                 <div class="mini_footer__container_down-logo">
-                    <img src="/assets/logo.png" alt="photo">
+                    <img src="assets/logo.png" alt="photo">
                 </div>
                 <a href="#">Политика конфиденциальности</a>
                 <p><span class="lang ru">Ru</span>|<span class="lang eng">Eng</span></p>
@@ -342,11 +342,11 @@
                         <div class="mini_footer__container_up__block">
                             <h1>О компании</h1>
                             <div class="mini_footer__container_up__block-urls">
-                                <a href="/about.html">О компании</a>
-                                <a href="/payment.html">Доставка и оплата</a>
-                                <a href="/faq.html">Faq</a>
-                                <a href="/comments.html">Отзывы</a>
-                                <a href="/contacts.html">Контакты</a>
+                                <a href="about.html">О компании</a>
+                                <a href="payment.html">Доставка и оплата</a>
+                                <a href="faq.html">Faq</a>
+                                <a href="comments.html">Отзывы</a>
+                                <a href="contacts.html">Контакты</a>
                                 <a href="#">+7 (812) 602-12-60</a>
                                 <a href="#">+7 (812) 602-12-58</a>
                                 <a href="#">Политика конфиденциальности</a>
@@ -358,7 +358,7 @@
             <div class="mini_footer-border"></div>
             <div class="mini_footer__container_down">
                 <div class="mini_footer__container_down-logo">
-                    <img src="/assets/logo.png" alt="photo">
+                    <img src="assets/logo.png" alt="photo">
                 </div>
                 <p><span class="lang ru">Ru</span>|<span class="lang eng">Eng</span></p>
             </div>
@@ -367,6 +367,6 @@
 
     </section>
 
-    <script src="/scripts/utils/commons.js"></script>
+    <script src="scripts/utils/commons.js"></script>
 </body>
 </html>
