--- a/howChoice.html
+++ b/howChoice.html
@@ -5,23 +5,23 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Как правильно выбрать аппарат</title>
-    <link rel="stylesheet" href="/styles/howChoice.css">
-    <link rel="stylesheet" href="/styles/commons.css">
+    <link rel="stylesheet" href="styles/howChoice.css">
+    <link rel="stylesheet" href="styles/commons.css">
 </head>
 <body>
     <header class="header">
         <div class="header_wrapper">
             <div class="header__logo">
-                <a href="/index.html">
+                <a href="index.html">
                     <img src="./assets/logo_blue.png" alt="logo" class="logo">
                 </a>
             </div>
             <nav class="header__block">
-                <a href="/catalog.html">Каталог</a>
+                <a href="catalog.html">Каталог</a>
                 <a href="#">Услуги</a>
-                <a href="/about.html">О компании</a>
-                <a href="/comments.html">Отзывы</a>
-                <a href="/contacts.html">Контакты</a>
+                <a href="about.html">О компании</a>
+                <a href="comments.html">Отзывы</a>
+                <a href="contacts.html">Контакты</a>
                 <a href="#">+7 (812) 602-12-60</a>
             </nav>
             <div class="burger">
@@ -32,12 +32,12 @@
             <div class="overlay"></div>
             <div class="burger_menu">
                 <div class="burger_menu-logo">
-                    <img src="/assets/logo_blue.png" alt="logo">
+                    <img src="assets/logo_blue.png" alt="logo">
                 </div>
                 <div class="burger_menu-border"></div>
                 <div class="burger_menu__container">
                     <div class="burger_menu__container-block">
-                        <a href="/catalog.html" class="burger_menu-container-block-title">Каталог</a>
+                        <a href="catalog.html" class="burger_menu-container-block-title">Каталог</a>
                         <a href="#" class="burger_menu-container-block-text">Импульсные дефектоскопы</a>
                         <a href="#" class="burger_menu-container-block-text">Дефектоскопы <br> постоянного потенциала</a>
                         <a href="#" class="burger_menu-container-block-text">Беспроводные <br> аккумуляторные блоки</a>
@@ -52,10 +52,10 @@
                         <a href="#" class="burger_menu-container-block-text">Дубликаты паспортов</a>
                     </div>
                     <!-- <div class="burger_menu__container-block"> -->
-                        <a href="/about.html" class="burger_menu-container-block-title">О компании</a>
+                        <a href="about.html" class="burger_menu-container-block-title">О компании</a>
                     <!-- </div> -->
                     <!-- <div class="burger_menu__container-block"> -->
-                        <a href="/payment.html" class="burger_menu-container-block-title">Доставка и оплата</a>
+                        <a href="payment.html" class="burger_menu-container-block-title">Доставка и оплата</a>
                     <!-- </div> -->
                     <div class="burger_menu__container-block">
                         <a href="#" class="burger_menu-container-block-title">Документация</a>
@@ -70,10 +70,10 @@
                         <a href="#" class="burger_menu-container-block-text">Группы электробезопасности</a>
                     </div>
                     <!-- <div class="burger_menu__container-block"> -->
-                        <a href="/comments.html" class="burger_menu-container-block-title">Отзывы</a>
+                        <a href="comments.html" class="burger_menu-container-block-title">Отзывы</a>
                     <!-- </div> -->
                     <div class="burger_menu__container-block">
-                        <a href="/contacts.html" class="burger_menu-container-block-title">Контакты</a>
+                        <a href="contacts.html" class="burger_menu-container-block-title">Контакты</a>
                         <p><span class="lang ru">Ru</span>|<span class="lang eng">Eng</span></p>
                     </div>
                     <div class="burger_menu__container-block">
@@ -107,10 +107,10 @@
             </div>
             <div class="choice__info_images">
                 <div class="choice__info_images-img">
-                    <img src="/assets/howChoice-choice-img-1.webp" alt="photo" class="choice__info_images-img-1">
+                    <img src="assets/howChoice-choice-img-1.webp" alt="photo" class="choice__info_images-img-1">
                 </div>
                 <div class="choice__info_images-img">
-                    <img src="/assets/howChoice-choice-img-2.webp" alt="photo" class="choice__info_images-img-2">
+                    <img src="assets/howChoice-choice-img-2.webp" alt="photo" class="choice__info_images-img-2">
                 </div>
             </div>
         </div>
@@ -121,7 +121,7 @@
             <h2 class="banner__describe_h2 mobile-banner-h2">Советы 
                 по выбору</h2>
             <div class="banner__image">
-                <img src="/assets/choice-banner-img.webp" alt="photo">
+                <img src="assets/choice-banner-img.webp" alt="photo">
             </div>
             <div class="banner__describe">
                 <h2 class="banner__describe_h2 desktop-banner-h2">Советы 
@@ -145,7 +145,7 @@
                 <p class="txt">Прежде всего следует обратить внимание на заданный в НТД на объект класс качества контроля. Для класса 1 следует рассматривать серию МАРТ, поскольку аппараты с импульсным напряжением, как правило, не позволяют получить класс лучше, чем 2.</p>
             </div>
             <div class="advice-1__image">
-                <img src="/assets/_choice-advice-1-img.webp" alt="photo">
+                <img src="assets/_choice-advice-1-img.webp" alt="photo">
             </div>
         </div>
     </section>
@@ -167,7 +167,7 @@
                     <p class="txt">Для серии МАРТ рекомендуется использовать пленку D7 со свинцовыми усиливающими экранами. Высококонтрастная мелкозернистая пленка позволит в полной мере раскрыть преимущества малого размера фокусного пятна этого класса аппаратов.</p>
                 </div>
                 <div class="advice-2__apparations__block-image">
-                    <img src="/assets/choice-advice-2-img-1.webp" alt="photo" class="advice-2__apparations__block-img">
+                    <img src="assets/choice-advice-2-img-1.webp" alt="photo" class="advice-2__apparations__block-img">
                 </div>
             </div>
             <div class="advice-2__apparations__block">
@@ -176,7 +176,7 @@
                     <p class="txt">Для импульсных аппаратов рекомендуется использование высокочувствительных пленок типа F8 с флюорометаллическими экранами. При использовании же высококонтрастной рентгеновской пленки со свинцовой фольгой необходимо либо согласиться, что экспозиция будет в несколько раз выше, чем при использовании аппаратов с постоянным напряжением, либо контролировать более тонкостенные изделия.</p>
                 </div>
                 <div class="advice-2__apparations__block-image">
-                    <img src="/assets/choice-advice-2-img-2.webp" alt="photo" class="advice-2__apparations__block-img">
+                    <img src="assets/choice-advice-2-img-2.webp" alt="photo" class="advice-2__apparations__block-img">
                 </div>
             </div>
         </div>
@@ -207,7 +207,7 @@
                 <button class="advice-3_button btn">Рассчитать номограмму</button>
             </div>
             <div class="advice-3__info__block-image">
-                <img src="/assets/choice-advice-3-img.webp" alt="photo" class="advice-3__info__block-img">
+                <img src="assets/choice-advice-3-img.webp" alt="photo" class="advice-3__info__block-img">
             </div>
         </div>
         <p class="txt">Если необходимый вам диапазон толщин попадает в интервал от 40 секунд до 10 минут, серию МАРТ можно использовать.
@@ -300,18 +300,18 @@
                 <div class="mini_footer__container_up__block">
                     <h1>О компании</h1>
                     <div class="mini_footer__container_up__block-urls">
-                        <a href="/about.html">О компании</a>
-                        <a href="/payment.html">Доставка и оплата</a>
-                        <a href="/faq.html">Faq</a>
-                        <a href="/comments.html">Отзывы</a>
-                        <a href="/contacts.html">Контакты</a>
+                        <a href="about.html">О компании</a>
+                        <a href="payment.html">Доставка и оплата</a>
+                        <a href="faq.html">Faq</a>
+                        <a href="comments.html">Отзывы</a>
+                        <a href="contacts.html">Контакты</a>
                     </div>
                 </div>
             </div>
             <div class="mini_footer-border"></div>
             <div class="mini_footer__container_down">
                 <div class="mini_footer__container_down-logo">
-                    <img src="/assets/logo.png" alt="photo">
+                    <img src="assets/logo.png" alt="photo">
                 </div>
                 <a href="#">Политика конфиденциальности</a>
                 <a href="#">+7 (812) 602-12-60</a>
@@ -347,11 +347,11 @@
                     <div class="mini_footer__container_up__block">
                         <h1>О компании</h1>
                         <div class="mini_footer__container_up__block-urls">
-                            <a href="/about.html">О компании</a>
-                            <a href="/payment.html">Доставка и оплата</a>
-                            <a href="/faq.html">Faq</a>
-                            <a href="/comments.html">Отзывы</a>
-                            <a href="/contacts.html">Контакты</a>
+                            <a href="about.html">О компании</a>
+                            <a href="payment.html">Доставка и оплата</a>
+                            <a href="faq.html">Faq</a>
+                            <a href="comments.html">Отзывы</a>
+                            <a href="contacts.html">Контакты</a>
                             <a href="#">+7 (812) 602-12-60</a>
                         </div>
                     </div>
@@ -379,7 +379,7 @@
             <div class="mini_footer-border"></div>
             <div class="mini_footer__container_down">
                 <div class="mini_footer__container_down-logo">
-                    <img src="/assets/logo.png" alt="photo">
+                    <img src="assets/logo.png" alt="photo">
                 </div>
                 <a href="#">Политика конфиденциальности</a>
                 <p><span class="lang ru">Ru</span>|<span class="lang eng">Eng</span></p>
@@ -427,11 +427,11 @@
                         <div class="mini_footer__container_up__block">
                             <h1>О компании</h1>
                             <div class="mini_footer__container_up__block-urls">
-                                <a href="/about.html">О компании</a>
-                                <a href="/payment.html">Доставка и оплата</a>
-                                <a href="/faq.html">Faq</a>
-                                <a href="/comments.html">Отзывы</a>
-                                <a href="/contacts.html">Контакты</a>
+                                <a href="about.html">О компании</a>
+                                <a href="payment.html">Доставка и оплата</a>
+                                <a href="faq.html">Faq</a>
+                                <a href="comments.html">Отзывы</a>
+                                <a href="contacts.html">Контакты</a>
                                 <a href="#">+7 (812) 602-12-60</a>
                                 <a href="#">+7 (812) 602-12-58</a>
                                 <a href="#">Политика конфиденциальности</a>
@@ -443,7 +443,7 @@
             <div class="mini_footer-border"></div>
             <div class="mini_footer__container_down">
                 <div class="mini_footer__container_down-logo">
-                    <img src="/assets/logo.png" alt="photo">
+                    <img src="assets/logo.png" alt="photo">
                 </div>
                 <p><span class="lang ru">Ru</span>|<span class="lang eng">Eng</span></p>
             </div>
@@ -452,7 +452,7 @@
 
     </section>
 
-    <script src="/scripts/utils/commons.js"></script>
-    <script src="/scripts/howChoice.js"></script>
+    <script src="scripts/utils/commons.js"></script>
+    <script src="scripts/howChoice.js"></script>
 </body>
 </html>
