--- a/index.html
+++ b/index.html
@@ -7,18 +7,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Spectroflash</title>
     <script src="https://kit.fontawesome.com/699a5ee3d6.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.css"/>
-    <link rel="stylesheet" href="/styles/style.css">
-    <link rel="stylesheet" href="/styles/commons.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.css">
+    <link rel="stylesheet" href="styles/style.css">
+    <link rel="stylesheet" href="styles/commons.css">
 </head>
 <body>
     <!-------------------header------------------>
     <header class="header">
         <div class="header__logo">
-            <img src="./assets/logo_blue.png" alt="logo">
+            <img src="./assets/logo_blue.svg" alt="logo">
         </div>
         <div class="header__more-30-year">
-            <img src="/assets/more-30-year.webp" alt="logo">
+            <img src="assets/more-30-year.webp" alt="logo">
         </div>
         <!-- <div class="header__block">
             <p>Приемная:</p>
@@ -86,49 +86,49 @@
     <div class="overlay"></div>
         <div class="burger_menu">
             <div class="burger_menu-logo">
-                <img src="/assets/logo_blue.png" alt="logo">
+                <img src="assets/logo_blue.png" alt="logo">
             </div>
             <div class="burger_menu-border"></div>
             <div class="burger_menu__container">
                 <div class="burger_menu__container-block">
-                    <a href="/catalog.html" class="burger_menu-container-block-title">Каталог</a>
-                    <a href="/impulse_def.html" class="burger_menu-container-block-text">Импульсные дефектоскопы</a>
-                    <a href="/def_per_potential.html" class="burger_menu-container-block-text">Дефектоскопы <br> постоянного потенциала</a>
-                    <a href="/acc_blocks.html" class="burger_menu-container-block-text">Беспроводные <br> аккумуляторные блоки</a>
-                    <a href="/croulers.html" class="burger_menu-container-block-text">Кроулеры</a>
-                    <a href="/accecories.html" class="burger_menu-container-block-text">Аксессуары</a>
+                    <a href="catalog.html" class="burger_menu-container-block-title">Каталог</a>
+                    <a href="impulse_def.html" class="burger_menu-container-block-text">Импульсные дефектоскопы</a>
+                    <a href="def_per_potential.html" class="burger_menu-container-block-text">Дефектоскопы <br> постоянного потенциала</a>
+                    <a href="acc_blocks.html" class="burger_menu-container-block-text">Беспроводные <br> аккумуляторные блоки</a>
+                    <a href="croulers.html" class="burger_menu-container-block-text">Кроулеры</a>
+                    <a href="accecories.html" class="burger_menu-container-block-text">Аксессуары</a>
                 </div>
                 <div class="burger_menu__container-block">
-                    <a href="/guarantee.html" class="burger_menu-container-block-title">Услуги</a>
-                    <a href="/guarantee.html" class="burger_menu-container-block-text">Ремонт</a>
-                    <a href="/techserv.html" class="burger_menu-container-block-text">Техническое обслуживание и электротехнические испытания</a>
-                    <a href="/disposal.html" class="burger_menu-container-block-text">Утилизация</a>
-                    <a href="/duplicates.html" class="burger_menu-container-block-text">Дубликаты паспортов</a>
+                    <a href="guarantee.html" class="burger_menu-container-block-title">Услуги</a>
+                    <a href="guarantee.html" class="burger_menu-container-block-text">Ремонт</a>
+                    <a href="techserv.html" class="burger_menu-container-block-text">Техническое обслуживание и электротехнические испытания</a>
+                    <a href="disposal.html" class="burger_menu-container-block-text">Утилизация</a>
+                    <a href="duplicates.html" class="burger_menu-container-block-text">Дубликаты паспортов</a>
                 </div>
                 <!-- <div class="burger_menu__container-block"> -->
-                    <a href="/about.html" class="burger_menu-container-block-title">О компании</a>
+                    <a href="about.html" class="burger_menu-container-block-title">О компании</a>
                 <!-- </div> -->
                 <!-- <div class="burger_menu__container-block"> -->
-                    <a href="/payment.html" class="burger_menu-container-block-title">Доставка и оплата</a>
+                    <a href="payment.html" class="burger_menu-container-block-title">Доставка и оплата</a>
                 <!-- </div> -->
                 <div class="burger_menu__container-block">
                     <a href="#" class="burger_menu-container-block-title">Документация</a>
-                    <a href="/managment.html" class="burger_menu-container-block-text">Руководство по эксплуатации</a>
-                    <a href="/conditions.html" class="burger_menu-container-block-text">Условия гарантии</a>
-                    <a href="/conclusions.html" class="burger_menu-container-block-text">Экспертные заключения</a>
+                    <a href="managment.html" class="burger_menu-container-block-text">Руководство по эксплуатации</a>
+                    <a href="conditions.html" class="burger_menu-container-block-text">Условия гарантии</a>
+                    <a href="conclusions.html" class="burger_menu-container-block-text">Экспертные заключения</a>
                 </div>
                 <div class="burger_menu__container-block">
                     <a href="#" class="burger_menu-container-block-title">Справка</a>
-                    <a href="/howChoice.html" class="burger_menu-container-block-text">Как правильно выбрать аппарат</a>
-                    <a href="/application.html" class="burger_menu-container-block-text">Согласование в Роспотребнадзоре</a>
-                    <a href="/groups.html" class="burger_menu-container-block-text">Группы электробезопасности</a>
-                    <a href="/faq.html" class="burger_menu-container-block-text">FAQ</a>
+                    <a href="howChoice.html" class="burger_menu-container-block-text">Как правильно выбрать аппарат</a>
+                    <a href="application.html" class="burger_menu-container-block-text">Согласование в Роспотребнадзоре</a>
+                    <a href="groups.html" class="burger_menu-container-block-text">Группы электробезопасности</a>
+                    <a href="faq.html" class="burger_menu-container-block-text">FAQ</a>
                 </div>
                 <!-- <div class="burger_menu__container-block"> -->
-                    <a href="/comments.html" class="burger_menu-container-block-title">Отзывы</a>
+                    <a href="comments.html" class="burger_menu-container-block-title">Отзывы</a>
                 <!-- </div> -->
                 <div class="burger_menu__container-block">
-                    <a href="/contacts.html" class="burger_menu-container-block-title">Контакты</a>
+                    <a href="contacts.html" class="burger_menu-container-block-title">Контакты</a>
                     <p><span class="lang ru">Ru</span>|<span class="lang eng">Eng</span></p>
                 </div>
                 <div class="burger_menu__container-block">
@@ -150,22 +150,22 @@
     <nav class="section_general__menu">
         <ul class="section_general__menu-top">
             <li>
-               <a href="/catalog.html">Каталог</a> 
+               <a href="catalog.html">Каталог</a> 
                <ul class="menu-catalog menu_lvl-2">
                     <li>
-                        <a href="/impulse_def.html">Импульсные дефектоскопы</a>
+                        <a href="impulse_def.html">Импульсные дефектоскопы</a>
                     </li>
                     <li>
-                        <a href="/def_per_potential.html">Дефектоскопы постоянного потенциала</a>
+                        <a href="def_per_potential.html">Дефектоскопы постоянного потенциала</a>
                     </li>
                     <li>
-                        <a href="/acc_blocks.html">Беспроводные аккумуляторные блоки</a>
+                        <a href="acc_blocks.html">Беспроводные аккумуляторные блоки</a>
                     </li>
                     <li>
-                        <a href="/croulers.html">Кроулеры</a>
+                        <a href="croulers.html">Кроулеры</a>
                     </li>
                     <li>
-                        <a href="/accecories.html">Аксессуары</a>
+                        <a href="accecories.html">Аксессуары</a>
                     </li>
                </ul>
             </li>
@@ -173,41 +173,41 @@
                <a href="#">Услуги</a> 
                <ul class="menu-service menu_lvl-2">
                     <li>
-                        <a href="/guarantee.html">Ремонт</a>
+                        <a href="guarantee.html">Ремонт</a>
                     </li>
                     <li>
-                        <a href="/techserv.html">Техническое обслуживание и электротехнические испытания</a>
+                        <a href="techserv.html">Техническое обслуживание и электротехнические испытания</a>
                     </li>
                     <li>
-                        <a href="/disposal.html">Утилизация</a>
+                        <a href="disposal.html">Утилизация</a>
                     </li>
                     <li>
-                        <a href="/duplicates.html">Дубликаты паспортов</a>
+                        <a href="duplicates.html">Дубликаты паспортов</a>
                     </li>
                 </ul>
             </li>
             <li>
-                <a href="/about.html">О компании</a>
+                <a href="about.html">О компании</a>
                 <ul class="menu-service menu_lvl-2">
                     <li>
-                        <a href="/comments.html">Отзывы</a>
+                        <a href="comments.html">Отзывы</a>
                     </li>
                 </ul>
             </li>
             <li>
-                <a href="/payment.html">Доставка и оплата</a>
+                <a href="payment.html">Доставка и оплата</a>
             </li>
             <li>
                 <a href="#">Документация</a>
                 <ul class="menu-docs menu_lvl-2">
                     <li>
-                        <a href="/managment.html">Руководство по эксплуатации</a>
+                        <a href="managment.html">Руководство по эксплуатации</a>
                     </li>
                     <li>
-                        <a href="/conditions.html">Условия гарантии</a>
+                        <a href="conditions.html">Условия гарантии</a>
                     </li>
                     <li>
-                        <a href="/conclusions.html">Экспертные заключения</a>
+                        <a href="conclusions.html">Экспертные заключения</a>
                     </li>
                 </ul>
             </li>
@@ -215,21 +215,21 @@
                <a href="#">Справка</a>
                <ul class="menu-ref menu_lvl-2">
                     <li>
-                        <a href="/howChoice.html">Как правильно выбрать аппарат</a>
+                        <a href="howChoice.html">Как правильно выбрать аппарат</a>
                     </li>
                     <li>
-                        <a href="/application.html">Согласование в Роспотребнадзоре</a>
+                        <a href="application.html">Согласование в Роспотребнадзоре</a>
                     </li>
                     <li>
-                        <a href="/groups.html">Группы электробезопасности</a>
+                        <a href="groups.html">Группы электробезопасности</a>
                     </li>
                     <li>
-                        <a href="/faq.html">FAQ</a>
+                        <a href="faq.html">FAQ</a>
                     </li>
                 </ul>
             </li>
             <li>
-                <a href="/contacts.html">Контакты</a>
+                <a href="contacts.html">Контакты</a>
             </li>
         </ul>
     </nav>
@@ -238,7 +238,7 @@
     <!-------------------first section slider------------------>
     <section class="section_general">
         <div class="bestsellers_phrase">
-            <img src="/assets/main-section-light.webp" alt="icon">
+            <img src="assets/main-section-light.webp" alt="icon">
             <p>ХИТЫ ПРОДАЖ</p>
         </div>
         <img src="./assets/mark.png" alt="mark" class="mark-main">
@@ -257,7 +257,7 @@
                             </div>
                             <!-- ------------------920px right block----------------- -->
                             <div class="section_general_slider__left_block-buttons">
-                                <button onclick="document.location='card.html'" class="section_general_slider__left_block-button_watch btn">Смотреть подробнее</button>
+                                <button class="section_general_slider__left_block-button_watch btn">Смотреть подробнее</button>
                                 <button class="section_general_slider__left_block-button_pickup btn">Подоборать аппарат</button>
                             </div>
                         </div>
@@ -1162,18 +1162,18 @@
                 <div class="mini_footer__container_up__block">
                     <h1>О компании</h1>
                     <div class="mini_footer__container_up__block-urls">
-                        <a href="/about.html">О компании</a>
-                        <a href="/payment.html">Доставка и оплата</a>
-                        <a href="/faq.html">Faq</a>
-                        <a href="/comments.html">Отзывы</a>
-                        <a href="/contacts.html">Контакты</a>
+                        <a href="about.html">О компании</a>
+                        <a href="payment.html">Доставка и оплата</a>
+                        <a href="faq.html">Faq</a>
+                        <a href="comments.html">Отзывы</a>
+                        <a href="contacts.html">Контакты</a>
                     </div>
                 </div>
             </div>
             <div class="mini_footer-border"></div>
             <div class="mini_footer__container_down">
                 <div class="mini_footer__container_down-logo">
-                    <img src="/assets/logo.png" alt="photo">
+                    <img src="assets/logo.png" alt="photo">
                 </div>
                 <a href="#">Политика конфиденциальности</a>
                 <a href="#">+7 (812) 602-12-60</a>
@@ -1209,11 +1209,11 @@
                     <div class="mini_footer__container_up__block">
                         <h1>О компании</h1>
                         <div class="mini_footer__container_up__block-urls">
-                            <a href="/about.html">О компании</a>
-                            <a href="/payment.html">Доставка и оплата</a>
-                            <a href="/faq.html">Faq</a>
-                            <a href="/comments.html">Отзывы</a>
-                            <a href="/contacts.html">Контакты</a>
+                            <a href="about.html">О компании</a>
+                            <a href="payment.html">Доставка и оплата</a>
+                            <a href="faq.html">Faq</a>
+                            <a href="comments.html">Отзывы</a>
+                            <a href="contacts.html">Контакты</a>
                             <a href="#">+7 (812) 602-12-60</a>
                         </div>
                     </div>
@@ -1241,7 +1241,7 @@
             <div class="mini_footer-border"></div>
             <div class="mini_footer__container_down">
                 <div class="mini_footer__container_down-logo">
-                    <img src="/assets/logo.png" alt="photo">
+                    <img src="assets/logo.png" alt="photo">
                 </div>
                 <a href="#">Политика конфиденциальности</a>
                 <p><span class="lang ru">Ru</span>|<span class="lang eng">Eng</span></p>
@@ -1289,11 +1289,11 @@
                         <div class="mini_footer__container_up__block">
                             <h1>О компании</h1>
                             <div class="mini_footer__container_up__block-urls">
-                                <a href="/about.html">О компании</a>
-                                <a href="/payment.html">Доставка и оплата</a>
-                                <a href="/faq.html">Faq</a>
-                                <a href="/comments.html">Отзывы</a>
-                                <a href="/contacts.html">Контакты</a>
+                                <a href="about.html">О компании</a>
+                                <a href="payment.html">Доставка и оплата</a>
+                                <a href="faq.html">Faq</a>
+                                <a href="comments.html">Отзывы</a>
+                                <a href="contacts.html">Контакты</a>
                                 <a href="#">+7 (812) 602-12-60</a>
                                 <a href="#">+7 (812) 602-12-58</a>
                                 <a href="#">Политика конфиденциальности</a>
@@ -1305,7 +1305,7 @@
             <div class="mini_footer-border"></div>
             <div class="mini_footer__container_down">
                 <div class="mini_footer__container_down-logo">
-                    <img src="/assets/logo.png" alt="photo">
+                    <img src="assets/logo.png" alt="photo">
                 </div>
                 <p><span class="lang ru">Ru</span>|<span class="lang eng">Eng</span></p>
             </div>
@@ -1315,7 +1315,7 @@
     </section>
 
     <script src="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.js"></script>
-    <script src="/scripts/utils/commons.js"></script>
+    <script src="scripts/utils/commons.js"></script>
     <script type="module" src="index.js"></script>
 </body>
 </html>
