--- a/accecories.html
+++ b/accecories.html
@@ -5,23 +5,23 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Catalog</title>
-    <link rel="stylesheet" href="/styles/commons.css">
-    <link rel="stylesheet" href="/styles/accecories.css">
+    <link rel="stylesheet" href="styles/commons.css">
+    <link rel="stylesheet" href="styles/accecories.css">
 </head>
 <body>
     <header class="header">
         <div class="header_wrapper">
             <div class="header__logo">
-                <a href="/index.html">
+                <a href="index.html">
                     <img src="./assets/logo_blue.png" alt="logo" class="logo">
                 </a>
             </div>
             <nav class="header__block">
-                <a href="/accecories.html">Каталог</a>
+                <a href="accecories.html">Каталог</a>
                 <a href="#">Услуги</a>
-                <a href="/about.html">О компании</a>
-                <a href="/comments.html">Отзывы</a>
-                <a href="/contacts.html">Контакты</a>
+                <a href="about.html">О компании</a>
+                <a href="comments.html">Отзывы</a>
+                <a href="contacts.html">Контакты</a>
                 <a href="#">+7 (812) 602-12-60</a>
             </nav>
             <div class="burger">
@@ -32,12 +32,12 @@
             <div class="overlay"></div>
             <div class="burger_menu">
                 <div class="burger_menu-logo">
-                    <img src="/assets/logo_blue.png" alt="logo">
+                    <img src="assets/logo_blue.png" alt="logo">
                 </div>
                 <div class="burger_menu-border"></div>
                 <div class="burger_menu__container">
                     <div class="burger_menu__container-block">
-                        <a href="/accecories.html" class="burger_menu-container-block-title">Каталог</a>
+                        <a href="accecories.html" class="burger_menu-container-block-title">Каталог</a>
                         <a href="#" class="burger_menu-container-block-text">Импульсные дефектоскопы</a>
                         <a href="#" class="burger_menu-container-block-text">Дефектоскопы <br> постоянного потенциала</a>
                         <a href="#" class="burger_menu-container-block-text">Беспроводные <br> аккумуляторные блоки</a>
@@ -52,10 +52,10 @@
                         <a href="#" class="burger_menu-container-block-text">Дубликаты паспортов</a>
                     </div>
                     <!-- <div class="burger_menu__container-block"> -->
-                        <a href="/about.html" class="burger_menu-container-block-title">О компании</a>
+                        <a href="about.html" class="burger_menu-container-block-title">О компании</a>
                     <!-- </div> -->
                     <!-- <div class="burger_menu__container-block"> -->
-                        <a href="/payment.html" class="burger_menu-container-block-title">Доставка и оплата</a>
+                        <a href="payment.html" class="burger_menu-container-block-title">Доставка и оплата</a>
                     <!-- </div> -->
                     <div class="burger_menu__container-block">
                         <a href="#" class="burger_menu-container-block-title">Документация</a>
@@ -70,10 +70,10 @@
                         <a href="#" class="burger_menu-container-block-text">Группы электробезопасности</a>
                     </div>
                     <!-- <div class="burger_menu__container-block"> -->
-                        <a href="/comments.html" class="burger_menu-container-block-title">Отзывы</a>
+                        <a href="comments.html" class="burger_menu-container-block-title">Отзывы</a>
                     <!-- </div> -->
                     <div class="burger_menu__container-block">
-                        <a href="/contacts.html" class="burger_menu-container-block-title">Контакты</a>
+                        <a href="contacts.html" class="burger_menu-container-block-title">Контакты</a>
                         <p><span class="lang ru">Ru</span>|<span class="lang eng">Eng</span></p>
                     </div>
                     <div class="burger_menu__container-block">
@@ -102,7 +102,7 @@
                 <div class="accecories__container__row">
                     <div class="accecories__container__row_block">
                         <div class="accecories__container__row_block-img">
-                            <img src="/assets/accecories-img-1.webp" alt="photo">
+                            <img src="assets/accecories-img-1.webp" alt="photo">
                         </div>
                         <div class="accecories__container__row_block-title">Пульт дистанционного управления</div>
                         <div class="accecories__container__row_block-buttons">
@@ -114,7 +114,7 @@
                 <div class="accecories__container__row">
                     <div class="accecories__container__row_block">
                         <div class="accecories__container__row_block-img">
-                            <img src="/assets/accecories-img-2.webp" alt="photo">
+                            <img src="assets/accecories-img-2.webp" alt="photo">
                         </div>
                         <div class="accecories__container__row_block-title">Сигнальная лампа-вспышка</div>
                         <div class="accecories__container__row_block-buttons">
@@ -128,7 +128,7 @@
                 <div class="accecories__container__row">
                     <div class="accecories__container__row_block">
                         <div class="accecories__container__row_block-img">
-                            <img src="/assets/accecories-img-3.webp" alt="photo">
+                            <img src="assets/accecories-img-3.webp" alt="photo">
                         </div>
                         <div class="accecories__container__row_block-title">НАБОР КОЛЛИМАТОРОВ</div>
                         <div class="accecories__container__row_block-buttons">
@@ -140,7 +140,7 @@
                 <div class="accecories__container__row">
                     <div class="accecories__container__row_block">
                         <div class="accecories__container__row_block-img">
-                            <img src="/assets/accecories-img-4.webp" alt="photo">
+                            <img src="assets/accecories-img-4.webp" alt="photo">
                         </div>
                         <div class="accecories__container__row_block-title">УСТРОЙСТВО ФИКСАЦИИ УФ-1</div>
                         <div class="accecories__container__row_block-buttons">
@@ -154,7 +154,7 @@
                 <div class="accecories__container__row">
                     <div class="accecories__container__row_block">
                         <div class="accecories__container__row_block-img">
-                            <img src="/assets/accecories-img-5.webp" alt="photo">
+                            <img src="assets/accecories-img-5.webp" alt="photo">
                         </div>
                         <div class="accecories__container__row_block-title">ПРИСПОСОБЛЕНИЕ «ПАУК-2М/80»</div>
                         <div class="accecories__container__row_block-buttons">
@@ -166,7 +166,7 @@
                 <div class="accecories__container__row">
                     <div class="accecories__container__row_block">
                         <div class="accecories__container__row_block-img">
-                            <img src="/assets/accecories-img-5.webp" alt="photo">
+                            <img src="assets/accecories-img-5.webp" alt="photo">
                         </div>
                         <div class="accecories__container__row_block-title">ПРИСПОСОБЛЕНИЕ «ПАУК-2М/100»</div>
                         <div class="accecories__container__row_block-buttons">
@@ -180,7 +180,7 @@
                 <div class="accecories__container__row">
                     <div class="accecories__container__row_block">
                         <div class="accecories__container__row_block-img">
-                            <img src="/assets/accecories-img-5.webp" alt="photo">
+                            <img src="assets/accecories-img-5.webp" alt="photo">
                         </div>
                         <div class="accecories__container__row_block-title">ПРиспособление «ПАУК-2М/МАРТ-200»</div>
                         <div class="accecories__container__row_block-buttons">
@@ -192,7 +192,7 @@
                 <div class="accecories__container__row">
                     <div class="accecories__container__row_block">
                         <div class="accecories__container__row_block-img">
-                            <img src="/assets/accecories-img-6.webp" alt="photo">
+                            <img src="assets/accecories-img-6.webp" alt="photo">
                         </div>
                         <div class="accecories__container__row_block-title">ПРИСПОСОБЛЕНИЕ «ПАУК-2М/МАРТ-250»</div>
                         <div class="accecories__container__row_block-buttons">
@@ -206,7 +206,7 @@
                 <div class="accecories__container__row">
                     <div class="accecories__container__row_block">
                         <div class="accecories__container__row_block-img">
-                            <img src="/assets/accecories-img-7.webp" alt="photo">
+                            <img src="assets/accecories-img-7.webp" alt="photo">
                         </div>
                         <div class="accecories__container__row_block-title">ШТАТИВ ТРУБНЫЙ ЦЕПНОЙ «АРИОН ШРТ-1/80»</div>
                         <div class="accecories__container__row_block-buttons">
@@ -218,7 +218,7 @@
                 <div class="accecories__container__row">
                     <div class="accecories__container__row_block">
                         <div class="accecories__container__row_block-img">
-                            <img src="/assets/accecories-img-8.webp" alt="photo">
+                            <img src="assets/accecories-img-8.webp" alt="photo">
                         </div>
                         <div class="accecories__container__row_block-title">ШТАТИВ ТРУБНЫЙ ЦЕПНОЙ «АРИОН ШРТ-1/100»</div>
                         <div class="accecories__container__row_block-buttons">
@@ -232,7 +232,7 @@
                 <div class="accecories__container__row">
                     <div class="accecories__container__row_block">
                         <div class="accecories__container__row_block-img">
-                            <img src="/assets/accecories-img-9.webp" alt="photo">
+                            <img src="assets/accecories-img-9.webp" alt="photo">
                         </div>
                         <div class="accecories__container__row_block-title">ШТАТИВ ТРУБНЫЙ ЦЕПНОЙ «АРИОН ШРТ-1/400»</div>
                         <div class="accecories__container__row_block-buttons">
@@ -244,7 +244,7 @@
                 <div class="accecories__container__row">
                     <div class="accecories__container__row_block">
                         <div class="accecories__container__row_block-img">
-                            <img src="/assets/accecories-img-10.webp" alt="photo">
+                            <img src="assets/accecories-img-10.webp" alt="photo">
                         </div>
                         <div class="accecories__container__row_block-title">ШТАТИВ ТРУБНЫЙ ЦЕПНОЙ «АРИОН ШРТ-1/МАРТ-200»</div>
                         <div class="accecories__container__row_block-buttons">
@@ -258,7 +258,7 @@
                 <div class="accecories__container__row">
                     <div class="accecories__container__row_block">
                         <div class="accecories__container__row_block-img">
-                            <img src="/assets/accecories-img-11.webp" alt="photo">
+                            <img src="assets/accecories-img-11.webp" alt="photo">
                         </div>
                         <div class="accecories__container__row_block-title">ШТАТИВ ТРУБНЫЙ ЦЕПНОЙ «АРИОН ШРТ-1/МАРТ-250»</div>
                         <div class="accecories__container__row_block-buttons">
@@ -270,7 +270,7 @@
                 <div class="accecories__container__row">
                     <div class="accecories__container__row_block">
                         <div class="accecories__container__row_block-img">
-                            <img src="/assets/accecories-img-12.webp" alt="photo">
+                            <img src="assets/accecories-img-12.webp" alt="photo">
                         </div>
                         <div class="accecories__container__row_block-title">ШТАТИВ ТРЕХНОЖНЫЙ «АРИОН ШРТ-3/МАРТ-200»</div>
                         <div class="accecories__container__row_block-buttons">
@@ -284,7 +284,7 @@
                 <div class="accecories__container__row">
                     <div class="accecories__container__row_block">
                         <div class="accecories__container__row_block-img">
-                            <img src="/assets/accecories-img-13.webp" alt="photo">
+                            <img src="assets/accecories-img-13.webp" alt="photo">
                         </div>
                         <div class="accecories__container__row_block-title">ШТАТИВ ТРЕХНОЖНЫЙ «АРИОН ШРТ-3/МАРТ-250»</div>
                         <div class="accecories__container__row_block-buttons">
@@ -296,7 +296,7 @@
                 <div class="accecories__container__row">
                     <div class="accecories__container__row_block">
                         <div class="accecories__container__row_block-img">
-                            <img src="/assets/accecories-img-14.webp" alt="photo">
+                            <img src="assets/accecories-img-14.webp" alt="photo">
                         </div>
                         <div class="accecories__container__row_block-title">ШТАТИВ ТРЕХНОЖНЫЙ «АРИОН ШРТ-3/400»</div>
                         <div class="accecories__container__row_block-buttons">
@@ -345,18 +345,18 @@
                 <div class="mini_footer__container_up__block">
                     <h1>О компании</h1>
                     <div class="mini_footer__container_up__block-urls">
-                        <a href="/about.html">О компании</a>
-                        <a href="/payment.html">Доставка и оплата</a>
-                        <a href="/faq.html">Faq</a>
-                        <a href="/comments.html">Отзывы</a>
-                        <a href="/contacts.html">Контакты</a>
+                        <a href="about.html">О компании</a>
+                        <a href="payment.html">Доставка и оплата</a>
+                        <a href="faq.html">Faq</a>
+                        <a href="comments.html">Отзывы</a>
+                        <a href="contacts.html">Контакты</a>
                     </div>
                 </div>
             </div>
             <div class="mini_footer-border"></div>
             <div class="mini_footer__container_down">
                 <div class="mini_footer__container_down-logo">
-                    <img src="/assets/logo.png" alt="photo">
+                    <img src="assets/logo.png" alt="photo">
                 </div>
                 <a href="#">Политика конфиденциальности</a>
                 <a href="#">+7 (812) 602-12-60</a>
@@ -392,11 +392,11 @@
                     <div class="mini_footer__container_up__block">
                         <h1>О компании</h1>
                         <div class="mini_footer__container_up__block-urls">
-                            <a href="/about.html">О компании</a>
-                            <a href="/payment.html">Доставка и оплата</a>
-                            <a href="/faq.html">Faq</a>
-                            <a href="/comments.html">Отзывы</a>
-                            <a href="/contacts.html">Контакты</a>
+                            <a href="about.html">О компании</a>
+                            <a href="payment.html">Доставка и оплата</a>
+                            <a href="faq.html">Faq</a>
+                            <a href="comments.html">Отзывы</a>
+                            <a href="contacts.html">Контакты</a>
                             <a href="#">+7 (812) 602-12-60</a>
                         </div>
                     </div>
@@ -424,7 +424,7 @@
             <div class="mini_footer-border"></div>
             <div class="mini_footer__container_down">
                 <div class="mini_footer__container_down-logo">
-                    <img src="/assets/logo.png" alt="photo">
+                    <img src="assets/logo.png" alt="photo">
                 </div>
                 <a href="#">Политика конфиденциальности</a>
                 <p><span class="lang ru">Ru</span>|<span class="lang eng">Eng</span></p>
@@ -472,11 +472,11 @@
                         <div class="mini_footer__container_up__block">
                             <h1>О компании</h1>
                             <div class="mini_footer__container_up__block-urls">
-                                <a href="/about.html">О компании</a>
-                                <a href="/payment.html">Доставка и оплата</a>
-                                <a href="/faq.html">Faq</a>
-                                <a href="/comments.html">Отзывы</a>
-                                <a href="/contacts.html">Контакты</a>
+                                <a href="about.html">О компании</a>
+                                <a href="payment.html">Доставка и оплата</a>
+                                <a href="faq.html">Faq</a>
+                                <a href="comments.html">Отзывы</a>
+                                <a href="contacts.html">Контакты</a>
                                 <a href="#">+7 (812) 602-12-60</a>
                                 <a href="#">+7 (812) 602-12-58</a>
                                 <a href="#">Политика конфиденциальности</a>
@@ -488,7 +488,7 @@
             <div class="mini_footer-border"></div>
             <div class="mini_footer__container_down">
                 <div class="mini_footer__container_down-logo">
-                    <img src="/assets/logo.png" alt="photo">
+                    <img src="assets/logo.png" alt="photo">
                 </div>
                 <p><span class="lang ru">Ru</span>|<span class="lang eng">Eng</span></p>
             </div>
@@ -498,7 +498,7 @@
     </section>
 
 
-    <script src="/scripts/utils/commons.js"></script>
-    <script src="/scripts/accecories.js"></script>
+    <script src="scripts/utils/commons.js"></script>
+    <script src="scripts/accecories.js"></script>
 </body>
 </html>
