--- a/catalog.html
+++ b/catalog.html
@@ -5,23 +5,23 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Catalog</title>
-    <link rel="stylesheet" href="/styles/commons.css">
-    <link rel="stylesheet" href="/styles/catalog.css">
+    <link rel="stylesheet" href="styles/commons.css">
+    <link rel="stylesheet" href="styles/catalog.css">
 </head>
 <body>
     <header class="header">
         <div class="header_wrapper">
             <div class="header__logo">
-                <a href="/index.html">
+                <a href="index.html">
                     <img src="./assets/logo_blue.png" alt="logo" class="logo">
                 </a>
             </div>
             <nav class="header__block">
-                <a href="/catalog.html">Каталог</a>
+                <a href="catalog.html">Каталог</a>
                 <a href="#">Услуги</a>
-                <a href="/about.html">О компании</a>
-                <a href="/comments.html">Отзывы</a>
-                <a href="/contacts.html">Контакты</a>
+                <a href="about.html">О компании</a>
+                <a href="comments.html">Отзывы</a>
+                <a href="contacts.html">Контакты</a>
                 <a href="#">+7 (812) 602-12-60</a>
             </nav>
             <div class="burger">
@@ -32,12 +32,12 @@
             <div class="overlay"></div>
             <div class="burger_menu">
                 <div class="burger_menu-logo">
-                    <img src="/assets/logo_blue.png" alt="logo">
+                    <img src="assets/logo_blue.png" alt="logo">
                 </div>
                 <div class="burger_menu-border"></div>
                 <div class="burger_menu__container">
                     <div class="burger_menu__container-block">
-                        <a href="/catalog.html" class="burger_menu-container-block-title">Каталог</a>
+                        <a href="catalog.html" class="burger_menu-container-block-title">Каталог</a>
                         <a href="#" class="burger_menu-container-block-text">Импульсные дефектоскопы</a>
                         <a href="#" class="burger_menu-container-block-text">Дефектоскопы <br> постоянного потенциала</a>
                         <a href="#" class="burger_menu-container-block-text">Беспроводные <br> аккумуляторные блоки</a>
@@ -52,10 +52,10 @@
                         <a href="#" class="burger_menu-container-block-text">Дубликаты паспортов</a>
                     </div>
                     <!-- <div class="burger_menu__container-block"> -->
-                        <a href="/about.html" class="burger_menu-container-block-title">О компании</a>
+                        <a href="about.html" class="burger_menu-container-block-title">О компании</a>
                     <!-- </div> -->
                     <!-- <div class="burger_menu__container-block"> -->
-                        <a href="/payment.html" class="burger_menu-container-block-title">Доставка и оплата</a>
+                        <a href="payment.html" class="burger_menu-container-block-title">Доставка и оплата</a>
                     <!-- </div> -->
                     <div class="burger_menu__container-block">
                         <a href="#" class="burger_menu-container-block-title">Документация</a>
@@ -70,10 +70,10 @@
                         <a href="#" class="burger_menu-container-block-text">Группы электробезопасности</a>
                     </div>
                     <!-- <div class="burger_menu__container-block"> -->
-                        <a href="/comments.html" class="burger_menu-container-block-title">Отзывы</a>
+                        <a href="comments.html" class="burger_menu-container-block-title">Отзывы</a>
                     <!-- </div> -->
                     <div class="burger_menu__container-block">
-                        <a href="/contacts.html" class="burger_menu-container-block-title">Контакты</a>
+                        <a href="contacts.html" class="burger_menu-container-block-title">Контакты</a>
                         <p><span class="lang ru">Ru</span>|<span class="lang eng">Eng</span></p>
                     </div>
                     <div class="burger_menu__container-block">
@@ -98,11 +98,11 @@
             <div class="catalog__container__row">
                 <div class="catalog__container__row_block">
                     <div class="red-card">
-                        <img src="/assets/lighting.png" alt="icon">
+                        <img src="assets/lighting.png" alt="icon">
                         <p>200,250 и 300 кВ</p>
                     </div>
                     <div class="catalog__container__row_block-img">
-                        <img src="/assets/main_img_slider.png" alt="photo">
+                        <img src="assets/main_img_slider.png" alt="photo">
                     </div>
                     <div class="catalog__container__row_block-title">Импульсные дефектоскопы</div>
                     <div class="catalog__container__row_block-text">Аппараты АРИНА включены в Единый Реестр МТР ПАО «Газпром»</div>
@@ -113,11 +113,11 @@
                 </div>
                 <div class="catalog__container__row_block">
                     <div class="red-card">
-                        <img src="/assets/lighting.png" alt="icon">
+                        <img src="assets/lighting.png" alt="icon">
                         <p>130-250 кВ</p>
                     </div>
                     <div class="catalog__container__row_block-img">
-                        <img src="/assets/main_img_slider-2.png" alt="photo">
+                        <img src="assets/main_img_slider-2.png" alt="photo">
                     </div>
                     <div class="catalog__container__row_block-title">Беспроводные аккумуляторные моноблоки</div>
                     <div class="catalog__container__row_block-text">Аппараты АРИНА включены в Единый Реестр МТР ПАО «Газпром»</div>
@@ -130,11 +130,11 @@
             <div class="catalog__container__row">
                 <div class="catalog__container__row_block">
                     <div class="red-card">
-                        <img src="/assets/lighting.png" alt="icon">
+                        <img src="assets/lighting.png" alt="icon">
                         <p>200 и 300 кВ</p>
                     </div>
                     <div class="catalog__container__row_block-img">
-                        <img src="/assets/main_img_slider-3.png" alt="photo">
+                        <img src="assets/main_img_slider-3.png" alt="photo">
                     </div>
                     <div class="catalog__container__row_block-title">Дефектоскопы постоянного потенциала</div>
                     <div class="catalog__container__row_block-text">Напряжение на аноде 160 кВ. Питание от сменного аккумулятора. Пульт дистанционного управления.</div>
@@ -149,7 +149,7 @@
                         <p></p>
                     </div>
                     <div class="catalog__container__row_block-img">
-                        <img src="/assets/main_img_slider-4.png" alt="photo">
+                        <img src="assets/main_img_slider-4.png" alt="photo">
                     </div>
                     <div class="catalog__container__row_block-title">Кроулеры</div>
                     <div class="catalog__container__row_block-text">Предназначен для панорамного контроля сварных стыков трубопроводов диаметром
@@ -167,7 +167,7 @@
                         <p></p>
                     </div>
                     <div class="catalog__container__row_block-img">
-                        <img src="/assets/main_img_slider-5.png" alt="photo">
+                        <img src="assets/main_img_slider-5.png" alt="photo">
                     </div>
                     <div class="catalog__container__row_block-title">Аксессуары</div>
                     <div class="catalog__container__row_block-text">Пауки, штативы, коллиматоры и другое сопутствующее оборудование.</div>
@@ -216,18 +216,18 @@
                 <div class="mini_footer__container_up__block">
                     <h1>О компании</h1>
                     <div class="mini_footer__container_up__block-urls">
-                        <a href="/about.html">О компании</a>
-                        <a href="/payment.html">Доставка и оплата</a>
-                        <a href="/faq.html">Faq</a>
-                        <a href="/comments.html">Отзывы</a>
-                        <a href="/contacts.html">Контакты</a>
+                        <a href="about.html">О компании</a>
+                        <a href="payment.html">Доставка и оплата</a>
+                        <a href="faq.html">Faq</a>
+                        <a href="comments.html">Отзывы</a>
+                        <a href="contacts.html">Контакты</a>
                     </div>
                 </div>
             </div>
             <div class="mini_footer-border"></div>
             <div class="mini_footer__container_down">
                 <div class="mini_footer__container_down-logo">
-                    <img src="/assets/logo.png" alt="photo">
+                    <img src="assets/logo.png" alt="photo">
                 </div>
                 <a href="#">Политика конфиденциальности</a>
                 <a href="#">+7 (812) 602-12-60</a>
@@ -263,11 +263,11 @@
                     <div class="mini_footer__container_up__block">
                         <h1>О компании</h1>
                         <div class="mini_footer__container_up__block-urls">
-                            <a href="/about.html">О компании</a>
-                            <a href="/payment.html">Доставка и оплата</a>
-                            <a href="/faq.html">Faq</a>
-                            <a href="/comments.html">Отзывы</a>
-                            <a href="/contacts.html">Контакты</a>
+                            <a href="about.html">О компании</a>
+                            <a href="payment.html">Доставка и оплата</a>
+                            <a href="faq.html">Faq</a>
+                            <a href="comments.html">Отзывы</a>
+                            <a href="contacts.html">Контакты</a>
                             <a href="#">+7 (812) 602-12-60</a>
                         </div>
                     </div>
@@ -295,7 +295,7 @@
             <div class="mini_footer-border"></div>
             <div class="mini_footer__container_down">
                 <div class="mini_footer__container_down-logo">
-                    <img src="/assets/logo.png" alt="photo">
+                    <img src="assets/logo.png" alt="photo">
                 </div>
                 <a href="#">Политика конфиденциальности</a>
                 <p><span class="lang ru">Ru</span>|<span class="lang eng">Eng</span></p>
@@ -343,11 +343,11 @@
                         <div class="mini_footer__container_up__block">
                             <h1>О компании</h1>
                             <div class="mini_footer__container_up__block-urls">
-                                <a href="/about.html">О компании</a>
-                                <a href="/payment.html">Доставка и оплата</a>
-                                <a href="/faq.html">Faq</a>
-                                <a href="/comments.html">Отзывы</a>
-                                <a href="/contacts.html">Контакты</a>
+                                <a href="about.html">О компании</a>
+                                <a href="payment.html">Доставка и оплата</a>
+                                <a href="faq.html">Faq</a>
+                                <a href="comments.html">Отзывы</a>
+                                <a href="contacts.html">Контакты</a>
                                 <a href="#">+7 (812) 602-12-60</a>
                                 <a href="#">+7 (812) 602-12-58</a>
                                 <a href="#">Политика конфиденциальности</a>
@@ -359,7 +359,7 @@
             <div class="mini_footer-border"></div>
             <div class="mini_footer__container_down">
                 <div class="mini_footer__container_down-logo">
-                    <img src="/assets/logo.png" alt="photo">
+                    <img src="assets/logo.png" alt="photo">
                 </div>
                 <p><span class="lang ru">Ru</span>|<span class="lang eng">Eng</span></p>
             </div>
@@ -369,7 +369,7 @@
     </section>
 
 
-    <script src="/scripts/utils/commons.js"></script>
-    <script src="/scripts/catalog.js"></script>
+    <script src="scripts/utils/commons.js"></script>
+    <script src="scripts/catalog.js"></script>
 </body>
 </html>
