--- a/disposal.html
+++ b/disposal.html
@@ -5,23 +5,23 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Утилизация дефектоскопов</title>
-    <link rel="stylesheet" href="/styles/commons.css">
-    <link rel="stylesheet" href="/styles/disposal.css">
+    <link rel="stylesheet" href="styles/commons.css">
+    <link rel="stylesheet" href="styles/disposal.css">
 </head>
 <body>
     <header class="header">
         <div class="header_wrapper">
             <div class="header__logo">
-                <a href="/index.html">
+                <a href="index.html">
                     <img src="./assets/logo_blue.png" alt="logo" class="logo">
                 </a>
             </div>
             <nav class="header__block">
-                <a href="/conclusions.html">Каталог</a>
+                <a href="conclusions.html">Каталог</a>
                 <a href="#">Услуги</a>
-                <a href="/about.html">О компании</a>
-                <a href="/comments.html">Отзывы</a>
-                <a href="/contacts.html">Контакты</a>
+                <a href="about.html">О компании</a>
+                <a href="comments.html">Отзывы</a>
+                <a href="contacts.html">Контакты</a>
                 <a href="#">+7 (812) 602-12-60</a>
             </nav>
             <div class="burger">
@@ -32,12 +32,12 @@
             <div class="overlay"></div>
             <div class="burger_menu">
                 <div class="burger_menu-logo">
-                    <img src="/assets/logo_blue.png" alt="logo">
+                    <img src="assets/logo_blue.png" alt="logo">
                 </div>
                 <div class="burger_menu-border"></div>
                 <div class="burger_menu__container">
                     <div class="burger_menu__container-block">
-                        <a href="/conclusions.html" class="burger_menu-container-block-title">Каталог</a>
+                        <a href="conclusions.html" class="burger_menu-container-block-title">Каталог</a>
                         <a href="#" class="burger_menu-container-block-text">Импульсные дефектоскопы</a>
                         <a href="#" class="burger_menu-container-block-text">Дефектоскопы <br> постоянного потенциала</a>
                         <a href="#" class="burger_menu-container-block-text">Беспроводные <br> аккумуляторные блоки</a>
@@ -52,10 +52,10 @@
                         <a href="#" class="burger_menu-container-block-text">Дубликаты паспортов</a>
                     </div>
                     <!-- <div class="burger_menu__container-block"> -->
-                        <a href="/about.html" class="burger_menu-container-block-title">О компании</a>
+                        <a href="about.html" class="burger_menu-container-block-title">О компании</a>
                     <!-- </div> -->
                     <!-- <div class="burger_menu__container-block"> -->
-                        <a href="/payment.html" class="burger_menu-container-block-title">Доставка и оплата</a>
+                        <a href="payment.html" class="burger_menu-container-block-title">Доставка и оплата</a>
                     <!-- </div> -->
                     <div class="burger_menu__container-block">
                         <a href="#" class="burger_menu-container-block-title">Документация</a>
@@ -70,10 +70,10 @@
                         <a href="#" class="burger_menu-container-block-text">Группы электробезопасности</a>
                     </div>
                     <!-- <div class="burger_menu__container-block"> -->
-                        <a href="/comments.html" class="burger_menu-container-block-title">Отзывы</a>
+                        <a href="comments.html" class="burger_menu-container-block-title">Отзывы</a>
                     <!-- </div> -->
                     <div class="burger_menu__container-block">
-                        <a href="/contacts.html" class="burger_menu-container-block-title">Контакты</a>
+                        <a href="contacts.html" class="burger_menu-container-block-title">Контакты</a>
                         <p><span class="lang ru">Ru</span>|<span class="lang eng">Eng</span></p>
                     </div>
                     <div class="burger_menu__container-block">
@@ -109,7 +109,7 @@
                 </div>
             </div>
             <div class="disposal__info__block">
-                <img src="/assets/disposal-img.webp" alt="photo">
+                <img src="assets/disposal-img.webp" alt="photo">
             </div>
         </div>
     </section>
@@ -245,18 +245,18 @@
                 <div class="mini_footer__container_up__block">
                     <h1>О компании</h1>
                     <div class="mini_footer__container_up__block-urls">
-                        <a href="/about.html">О компании</a>
-                        <a href="/payment.html">Доставка и оплата</a>
-                        <a href="/faq.html">Faq</a>
-                        <a href="/comments.html">Отзывы</a>
-                        <a href="/contacts.html">Контакты</a>
+                        <a href="about.html">О компании</a>
+                        <a href="payment.html">Доставка и оплата</a>
+                        <a href="faq.html">Faq</a>
+                        <a href="comments.html">Отзывы</a>
+                        <a href="contacts.html">Контакты</a>
                     </div>
                 </div>
             </div>
             <div class="mini_footer-border"></div>
             <div class="mini_footer__container_down">
                 <div class="mini_footer__container_down-logo">
-                    <img src="/assets/logo.png" alt="photo">
+                    <img src="assets/logo.png" alt="photo">
                 </div>
                 <a href="#">Политика конфиденциальности</a>
                 <a href="#">+7 (812) 602-12-60</a>
@@ -292,11 +292,11 @@
                     <div class="mini_footer__container_up__block">
                         <h1>О компании</h1>
                         <div class="mini_footer__container_up__block-urls">
-                            <a href="/about.html">О компании</a>
-                            <a href="/payment.html">Доставка и оплата</a>
-                            <a href="/faq.html">Faq</a>
-                            <a href="/comments.html">Отзывы</a>
-                            <a href="/contacts.html">Контакты</a>
+                            <a href="about.html">О компании</a>
+                            <a href="payment.html">Доставка и оплата</a>
+                            <a href="faq.html">Faq</a>
+                            <a href="comments.html">Отзывы</a>
+                            <a href="contacts.html">Контакты</a>
                             <a href="#">+7 (812) 602-12-60</a>
                         </div>
                     </div>
@@ -324,7 +324,7 @@
             <div class="mini_footer-border"></div>
             <div class="mini_footer__container_down">
                 <div class="mini_footer__container_down-logo">
-                    <img src="/assets/logo.png" alt="photo">
+                    <img src="assets/logo.png" alt="photo">
                 </div>
                 <a href="#">Политика конфиденциальности</a>
                 <p><span class="lang ru">Ru</span>|<span class="lang eng">Eng</span></p>
@@ -372,11 +372,11 @@
                         <div class="mini_footer__container_up__block">
                             <h1>О компании</h1>
                             <div class="mini_footer__container_up__block-urls">
-                                <a href="/about.html">О компании</a>
-                                <a href="/payment.html">Доставка и оплата</a>
-                                <a href="/faq.html">Faq</a>
-                                <a href="/comments.html">Отзывы</a>
-                                <a href="/contacts.html">Контакты</a>
+                                <a href="about.html">О компании</a>
+                                <a href="payment.html">Доставка и оплата</a>
+                                <a href="faq.html">Faq</a>
+                                <a href="comments.html">Отзывы</a>
+                                <a href="contacts.html">Контакты</a>
                                 <a href="#">+7 (812) 602-12-60</a>
                                 <a href="#">+7 (812) 602-12-58</a>
                                 <a href="#">Политика конфиденциальности</a>
@@ -388,7 +388,7 @@
             <div class="mini_footer-border"></div>
             <div class="mini_footer__container_down">
                 <div class="mini_footer__container_down-logo">
-                    <img src="/assets/logo.png" alt="photo">
+                    <img src="assets/logo.png" alt="photo">
                 </div>
                 <p><span class="lang ru">Ru</span>|<span class="lang eng">Eng</span></p>
             </div>
@@ -397,6 +397,6 @@
 
     </section>
 
-    <script src="/scripts/utils/commons.js"></script>
+    <script src="scripts/utils/commons.js"></script>
 </body>
 </html>
