--- a/techserv.html
+++ b/techserv.html
@@ -5,23 +5,23 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Catalog</title>
-    <link rel="stylesheet" href="/styles/commons.css">
-    <link rel="stylesheet" href="/styles/techserv.css">
+    <link rel="stylesheet" href="styles/commons.css">
+    <link rel="stylesheet" href="styles/techserv.css">
 </head>
 <body>
     <header class="header">
         <div class="header_wrapper">
             <div class="header__logo">
-                <a href="/index.html">
+                <a href="index.html">
                     <img src="./assets/logo_blue.png" alt="logo" class="logo">
                 </a>
             </div>
             <nav class="header__block">
-                <a href="/accecories.html">Каталог</a>
+                <a href="accecories.html">Каталог</a>
                 <a href="#">Услуги</a>
-                <a href="/about.html">О компании</a>
-                <a href="/comments.html">Отзывы</a>
-                <a href="/contacts.html">Контакты</a>
+                <a href="about.html">О компании</a>
+                <a href="comments.html">Отзывы</a>
+                <a href="contacts.html">Контакты</a>
                 <a href="#">+7 (812) 602-12-60</a>
             </nav>
             <div class="burger">
@@ -32,12 +32,12 @@
             <div class="overlay"></div>
             <div class="burger_menu">
                 <div class="burger_menu-logo">
-                    <img src="/assets/logo_blue.png" alt="logo">
+                    <img src="assets/logo_blue.png" alt="logo">
                 </div>
                 <div class="burger_menu-border"></div>
                 <div class="burger_menu__container">
                     <div class="burger_menu__container-block">
-                        <a href="/accecories.html" class="burger_menu-container-block-title">Каталог</a>
+                        <a href="accecories.html" class="burger_menu-container-block-title">Каталог</a>
                         <a href="#" class="burger_menu-container-block-text">Импульсные дефектоскопы</a>
                         <a href="#" class="burger_menu-container-block-text">Дефектоскопы <br> постоянного потенциала</a>
                         <a href="#" class="burger_menu-container-block-text">Беспроводные <br> аккумуляторные блоки</a>
@@ -52,10 +52,10 @@
                         <a href="#" class="burger_menu-container-block-text">Дубликаты паспортов</a>
                     </div>
                     <!-- <div class="burger_menu__container-block"> -->
-                        <a href="/about.html" class="burger_menu-container-block-title">О компании</a>
+                        <a href="about.html" class="burger_menu-container-block-title">О компании</a>
                     <!-- </div> -->
                     <!-- <div class="burger_menu__container-block"> -->
-                        <a href="/payment.html" class="burger_menu-container-block-title">Доставка и оплата</a>
+                        <a href="payment.html" class="burger_menu-container-block-title">Доставка и оплата</a>
                     <!-- </div> -->
                     <div class="burger_menu__container-block">
                         <a href="#" class="burger_menu-container-block-title">Документация</a>
@@ -70,10 +70,10 @@
                         <a href="#" class="burger_menu-container-block-text">Группы электробезопасности</a>
                     </div>
                     <!-- <div class="burger_menu__container-block"> -->
-                        <a href="/comments.html" class="burger_menu-container-block-title">Отзывы</a>
+                        <a href="comments.html" class="burger_menu-container-block-title">Отзывы</a>
                     <!-- </div> -->
                     <div class="burger_menu__container-block">
-                        <a href="/contacts.html" class="burger_menu-container-block-title">Контакты</a>
+                        <a href="contacts.html" class="burger_menu-container-block-title">Контакты</a>
                         <p><span class="lang ru">Ru</span>|<span class="lang eng">Eng</span></p>
                     </div>
                     <div class="burger_menu__container-block">
@@ -132,12 +132,12 @@
                 <p class="txt">В этом случае проверяются электроизмерительные приборы, состояние заземления, изоляции, работоспособность систем блокировки и сигнализации, техническое состояние рентгеновского дефектоскопа (трансформатора, рентгеновского излучателя, защитных устройств).»</p>
             </div>
             <div class="test__info_image">
-                <img src="/assets/techserv-test-img.webp" alt="photo" class="test-info-1-img">
+                <img src="assets/techserv-test-img.webp" alt="photo" class="test-info-1-img">
             </div>
         </div>
         <div class="test__info test__info-2">
             <div class="test__info_image">
-                <img src="/assets/techserv-test-img-2.webp" alt="photo" class="test-info-2-img">
+                <img src="assets/techserv-test-img-2.webp" alt="photo" class="test-info-2-img">
             </div>
             <div class="test__info_text">
                 <p class="txt">Электротехнические испытания могут проводиться собственной измерительной лабораторией эксплуатирующей организации при наличии у нее необходимых приборов.</p>
@@ -152,7 +152,7 @@
             <div class="test__info_docs">
                 <div class="test__info_docs__block">
                     <div class="test__info_docs__block-img">
-                        <img src="/assets/techserv-test-doc.webp" alt="photo">
+                        <img src="assets/techserv-test-doc.webp" alt="photo">
                     </div>
                     <div class="test__info_docs__block-button">
                         <p class="txt">Образец заключения о прохождении испытаний</p>
@@ -161,7 +161,7 @@
                 </div>
                 <div class="test__info_docs__block">
                     <div class="test__info_docs__block-img">
-                        <img src="/assets/techserv-test-doc.webp" alt="photo">
+                        <img src="assets/techserv-test-doc.webp" alt="photo">
                     </div>
                     <div class="test__info_docs__block-button">
                         <p class="txt">Сведения о проведенных испытаниях</p>
@@ -182,7 +182,7 @@
         <p class="methods_desc txt">Методика, по которой следует проводить техническое обслуживание и электротехнические испытаний, изложена в «Руководстве по техническому обслуживанию и электротехническим испытаниям».</p>
         <div class="methods_info">
             <div class="methods_info__block">
-                <img src="/assets/techserv-methods-img-1.webp" alt="photo">
+                <img src="assets/techserv-methods-img-1.webp" alt="photo">
                 <p class="txt">Руководство 
                     Март-200, Март-250</p>
                 <button class="btn">Открыть руководство</button>
@@ -202,7 +202,7 @@
                 </div>
             </div>
             <div class="methods_info__block">
-                <img src="/assets/techserv-methods-img-2.webp" alt="photo">
+                <img src="assets/techserv-methods-img-2.webp" alt="photo">
                 <p class="txt">Руководство 
                     Арина, Памир</p>
                 <button class="btn">Открыть руководство</button>
@@ -224,7 +224,7 @@
                 <p class="txt">внешний осмотр, проверяя целостность кабелей, чистоту разъёмом, чистоту и отсутствие механических повреждений</p>
             </div>
             <div class="service__info_image">
-                <img src="/assets/techserv-service-img.webp" alt="photo">
+                <img src="assets/techserv-service-img.webp" alt="photo">
             </div>
         </div>
     </section>
@@ -241,7 +241,7 @@
                 <input type="text" placeholder="Контактное лицо">
                 <input type="phone" placeholder="+7 (999) 999-99-99">
                 <div class="form__wrapper_chekbox mobile-chekbox">
-                    <input type="checkbox" class="custom-checkbox" id="accept-mobile" name="accept" value="accept"/>
+                    <input type="checkbox" class="custom-checkbox" id="accept-mobile" name="accept" value="accept">
                     <label for="accept-mobile">Нажимая кнопку, я подтверждаю, что ознакомился (ознакомилась) <span class="orange"> с политикой конфиденциальности </span> и принимаю условия</label>
                 </div>
                 <button class="btn">Отправить данные</button>
@@ -285,18 +285,18 @@
                 <div class="mini_footer__container_up__block">
                     <h1>О компании</h1>
                     <div class="mini_footer__container_up__block-urls">
-                        <a href="/about.html">О компании</a>
-                        <a href="/payment.html">Доставка и оплата</a>
-                        <a href="/faq.html">Faq</a>
-                        <a href="/comments.html">Отзывы</a>
-                        <a href="/contacts.html">Контакты</a>
+                        <a href="about.html">О компании</a>
+                        <a href="payment.html">Доставка и оплата</a>
+                        <a href="faq.html">Faq</a>
+                        <a href="comments.html">Отзывы</a>
+                        <a href="contacts.html">Контакты</a>
                     </div>
                 </div>
             </div>
             <div class="mini_footer-border"></div>
             <div class="mini_footer__container_down">
                 <div class="mini_footer__container_down-logo">
-                    <img src="/assets/logo.png" alt="photo">
+                    <img src="assets/logo.png" alt="photo">
                 </div>
                 <a href="#">Политика конфиденциальности</a>
                 <a href="#">+7 (812) 602-12-60</a>
@@ -332,11 +332,11 @@
                     <div class="mini_footer__container_up__block">
                         <h1>О компании</h1>
                         <div class="mini_footer__container_up__block-urls">
-                            <a href="/about.html">О компании</a>
-                            <a href="/payment.html">Доставка и оплата</a>
-                            <a href="/faq.html">Faq</a>
-                            <a href="/comments.html">Отзывы</a>
-                            <a href="/contacts.html">Контакты</a>
+                            <a href="about.html">О компании</a>
+                            <a href="payment.html">Доставка и оплата</a>
+                            <a href="faq.html">Faq</a>
+                            <a href="comments.html">Отзывы</a>
+                            <a href="contacts.html">Контакты</a>
                             <a href="#">+7 (812) 602-12-60</a>
                         </div>
                     </div>
@@ -364,7 +364,7 @@
             <div class="mini_footer-border"></div>
             <div class="mini_footer__container_down">
                 <div class="mini_footer__container_down-logo">
-                    <img src="/assets/logo.png" alt="photo">
+                    <img src="assets/logo.png" alt="photo">
                 </div>
                 <a href="#">Политика конфиденциальности</a>
                 <p><span class="lang ru">Ru</span>|<span class="lang eng">Eng</span></p>
@@ -412,11 +412,11 @@
                         <div class="mini_footer__container_up__block">
                             <h1>О компании</h1>
                             <div class="mini_footer__container_up__block-urls">
-                                <a href="/about.html">О компании</a>
-                                <a href="/payment.html">Доставка и оплата</a>
-                                <a href="/faq.html">Faq</a>
-                                <a href="/comments.html">Отзывы</a>
-                                <a href="/contacts.html">Контакты</a>
+                                <a href="about.html">О компании</a>
+                                <a href="payment.html">Доставка и оплата</a>
+                                <a href="faq.html">Faq</a>
+                                <a href="comments.html">Отзывы</a>
+                                <a href="contacts.html">Контакты</a>
                                 <a href="#">+7 (812) 602-12-60</a>
                                 <a href="#">+7 (812) 602-12-58</a>
                                 <a href="#">Политика конфиденциальности</a>
@@ -428,7 +428,7 @@
             <div class="mini_footer-border"></div>
             <div class="mini_footer__container_down">
                 <div class="mini_footer__container_down-logo">
-                    <img src="/assets/logo.png" alt="photo">
+                    <img src="assets/logo.png" alt="photo">
                 </div>
                 <p><span class="lang ru">Ru</span>|<span class="lang eng">Eng</span></p>
             </div>
@@ -438,6 +438,6 @@
     </section>
 
 
-    <script src="/scripts/utils/commons.js"></script>
+    <script src="scripts/utils/commons.js"></script>
 </body>
 </html>
